--- a/SignIn.html
+++ b/SignIn.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Sign In">
     <title>Salwa's Recipes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../Recipes.css" type="text/css" rel="stylesheet" />
+    <link href="Recipes.css" type="text/css" rel="stylesheet" />
   </head>
     <body>
     <header id= "top">
